# helmet-cam-trimmer

./: .pre-commit-config.yaml  Pipfile  README.md  main.py  pyproject.toml  test_main.py  test_trim.py  trim.py
.github/workflows/: tests.yaml
